--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@artsy/fresnel": "^1.9.0",
+    "@truffle/hdwallet-provider": "^2.1.15",
     "fs-extra": "^10.0.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^8.4.0",
